--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <title>Variation 4 – Matched Style</title>
+  <title></title>
   <script src="https://aframe.io/releases/1.5.0/aframe.min.js"></script>
 </head>
 
